// Copyright 2024 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.push;
option go_package = "github.com/bucketeer-io/bucketeer/proto/push";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "proto/push/push.proto";
import "proto/push/command.proto";

message CreatePushRequest {
  reserved 1;
  CreatePushCommand command = 2 [deprecated = true];
  repeated string tags = 3;
  string name = 4;
  bytes fcm_service_account = 5;
  string environment_id = 6;
}

message CreatePushResponse {
  Push push = 1;
}

message ListPushesRequest {
  enum OrderBy {
    DEFAULT = 0;
    NAME = 1;
    CREATED_AT = 2;
    UPDATED_AT = 3;
  }
  enum OrderDirection {
    ASC = 0;
    DESC = 1;
  }
  reserved 1;
  int64 page_size = 2;
  string cursor = 3;
  OrderBy order_by = 4;
  OrderDirection order_direction = 5;
  string search_keyword = 6;
  string environment_id = 7;
}

message ListPushesResponse {
  repeated Push pushes = 1;
  string cursor = 2;
  int64 total_count = 3;
}

message DeletePushRequest {
  reserved 1;
  string id = 2;
  DeletePushCommand command = 3;
  string environment_id = 4;
}

message DeletePushResponse {}

message UpdatePushRequest {
  reserved 1;
  string id = 2 [(google.api.field_behavior) = REQUIRED];
  AddPushTagsCommand add_push_tags_command = 3 [deprecated = true];
  DeletePushTagsCommand delete_push_tags_command = 4 [deprecated = true];
  RenamePushCommand rename_push_command = 5 [deprecated = true];
  repeated string tags = 6;
  google.protobuf.StringValue name = 7;
  string environment_id = 8 [(google.api.field_behavior) = REQUIRED];
}

message UpdatePushResponse {
  Push push = 1;
}

message GetPushRequest {
  string environment_id = 1 [(google.api.field_behavior) = REQUIRED];
  ;
  string id = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetPushResponse {
  Push push = 1;
}

service PushService {
  rpc ListPushes(ListPushesRequest) returns (ListPushesResponse) {
    option (google.api.http) = {
      get: "/v1/pushes"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List",
      description: "List pushes."
      tags: "push"
      operation_id: "web.v1.push.list"
      responses: {
        key: "400"
        value: {
          description: "Returned for bad requests that may have failed validation."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 3, "message": "invalid arguments error", "details": [] }'
          }
        }
      }
      responses: {
        key: "401"
        value: {
          description: "Request could not be authenticated (authentication required)."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 16, "message": "not authenticated", "details": [] }'
          }
        }
      }
    };
  }
  rpc CreatePush(CreatePushRequest) returns (CreatePushResponse) {
    option (google.api.http) = {
      post: "/v1/push"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create",
      description: "Create a push."
      tags: "push"
      operation_id: "web.v1.push.create"
      responses: {
        key: "400"
        value: {
          description: "Returned for bad requests that may have failed validation."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 3, "message": "invalid arguments error", "details": [] }'
          }
        }
      }
      responses: {
        key: "401"
        value: {
          description: "Request could not be authenticated (authentication required)."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 16, "message": "not authenticated", "details": [] }'
          }
        }
      }
    };
  }
  rpc UpdatePush(UpdatePushRequest) returns (UpdatePushResponse) {
    option (google.api.http) = {
      patch: "/v1/push"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update",
      description: "Update a push."
      tags: "push"
      operation_id: "web.v1.push.update"
      responses: {
        key: "400"
        value: {
          description: "Returned for bad requests that may have failed validation."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 3, "message": "invalid arguments error", "details": [] }'
          }
        }
      }
      responses: {
        key: "401"
        value: {
          description: "Request could not be authenticated (authentication required)."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 16, "message": "not authenticated", "details": [] }'
          }
        }
      }
    };
  }
  rpc GetPush(GetPushRequest) returns (GetPushResponse) {
    option (google.api.http) = {
      get: "/v1/push"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get",
      description: "Get a push."
      tags: "push"
      operation_id: "web.v1.push.get"
      responses: {
        key: "400"
        value: {
          description: "Returned for bad requests that may have failed validation."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 3, "message": "invalid arguments error", "details": [] }'
          }
        }
      }
      responses: {
        key: "401"
        value: {
          description: "Request could not be authenticated (authentication required)."
          schema: { json_schema: { ref: ".google.rpc.Status" } }
          examples: {
            key: "application/json"
            value: '{ "code": 16, "message": "not authenticated", "details": [] }'
          }
        }
      }
    };
  }
  rpc DeletePush(DeletePushRequest) returns (DeletePushResponse) {}
}
